# AL-OCR-Project

./: .coverage 2  .dockerignore  .dockleignore  .flake8  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pylintrc  AL_OCR_Project.ipynb  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HelloWorld.al  LICENSE  OCRService.al  README.md  README_TESTING.md  SECURITY.md  SOURCERY_SUGGESTIONS.md  TEST_PLAN_Secure_Docker_Image.md  app.json  bandit.yaml  checkov_report.json  current_freeze.txt  deploy_gha  deploy_gha.pub  docker-compose.yml  dvc.yaml  mypy.ini  netlify.toml  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  serve_api.py
.dvc/: config
.github/: dependabot.yml
.trunk/: actions  logs  notifications  out  tools
.zencoder/: mcp.local.json
SEC-001/: non_root_ocr_checklist.md  non_root_ocr_test_plan.md  non_root_ocr_testcases.md
config/: config.yaml  logging.yaml
data/: README.md  card_brand_rules.json  occlusion_manifest_template.csv  raw.dvc
deploy/: README.md  gen_ssh_key.sh
docker/: Dockerfile.api  Dockerfile.worker
ocr_reconstruct/: ETHICS.md  README.md  README_INSTALL.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py
ocr_reconstruct/modules/: __init__.py  enhance.py  ocr.py  pipeline.py  reconstruct.py
ocr_reconstruct/ocr_reconstruct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ocr_reconstruct/tests/: __init__.py  generate_samples.py  test_enhance.py  test_import.py  test_pipeline.py  test_pipeline_unit.py  test_reconstruct.py
ocr_reconstruct/tests/data/: README.md
(+319 files in other folders)
