[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_reconstruct"
version = "0.1.0"
description = "Iterative OCR with pixel reconstruction (for research and legitimate uses)"
readme = "README.md"
authors = [ { name = "AL Project" } ]
license = "MIT"
dependencies = [
    "opencv-python-headless",
    "pytesseract",
    "numpy",
    "pillow",
    "scikit-image",
    "scipy"
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow, requires Tesseract)"
]

